src/css/Home.css
.container {
  max-width: 1200px;
  margin: 0 auto; /* Center the container */
  padding: 0 15px; /* Add padding for mobile */
}

.section-title {
  text-align: center;
  margin: 40px 0 20px 0;
  font-size: 2rem;
  font-weight: bold;
}

.kol-section,
.products-section,
.events-section {
  margin-bottom: 60px;
}

/* Carousel */
.top-carousel {
  width: 100%;
  margin: 0 auto;
}

.carousel-item img {
  width: 100%;
  height: auto;
}
.ads-carousel {
  display: flex;
  overflow-x: auto;
  margin-bottom: 20px;
}

.ad-item img {
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: 8px;
  max-height: 300px;
}

/* KOL Section */
.kol-row {
  display: flex;
  justify-content: space-around; /* Center KOL images */
  align-items: center;
  flex-wrap: wrap;
}

.kol-col {
  text-align: center;
  position: relative;
}

.kol-image {
  border: 1px solid #ddd;
  width: 150px;
  height: 150px;
  object-fit: cover;
  transition: transform 0.5s ease;
}

.kol-col:hover .kol-image {
  transform: scale(1.2);
}

.home-card-link-ProductPage {
  text-decoration: none;
}

/* Products Section */
.products-row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: 0 -10px;
}

.product-card {
  border: 1px solid #ddd;
  border-radius: 8px;
  max-width: 250px; /* Set a maximum width */
  height: 270px; /* Set a fixed height for the card */
  display: flex;
  flex-direction: column;
  margin-bottom: 9%;
  margin-top: 2%;
  transition: transform 0.5s ease;
}

.product-card:hover {
  transform: scale(1.1); /* Lift effect on hover */
  background-color: white
}

.product-card img {
  max-width: 100%;
  height: 150px; /* Reduce image height */
  object-fit: cover;
}

.product-card .card-body {
  padding: 10px; /* Adjust padding */
  max-height: 150px; /* Limit the height of the card body */
  overflow: hidden; /* Hide overflow if the content exceeds the height */
}

.product-card .card-title {
  font-size: 1.1rem; /* Adjust font size */
  margin-bottom: 10px; /* Adjust margin */
}

.product-card .card-text {
  font-size: 0.9rem; /* Reduce text size */
  line-height: 1.2; /* Adjust line height */
  max-height: 20px; /* Limit the height of the text */
  overflow: hidden; /* Hide overflow if the content exceeds the height */
}

/* Events Section */
.events-row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: 0 -10px;
}

.event-card {
  margin-top: 2%;
  margin-bottom: 9%;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 8px;
  text-align: center;
  transition: transform 0.5s ease;

}

.event-card-link {
  text-decoration: none;
}

.event-card:hover {
  transform: scale(1.1); /* Lift effect on hover */
}

.event-card img {
  max-width: 100%;
  height: 200px;
  object-fit: cover;
}

/* Mobile Adjustments */
@media (max-width: 768px) {
  .kol-row,
  .products-row,
  .events-row {
    justify-content: center;
  }

  .kol-col {
    flex: 1 0 100px;
    max-width: 100px;
  }

  .product-card,
  .event-card {
    flex: 1 0 100%;
    max-width: 100%;
  }

  .product-card img,
  .event-card img {
    height: 150px;
  }
}

